docs/0.18/_sources/api/gammapy.maps.HpxNDMap.rst.txt
HpxNDMap
========

.. currentmodule:: gammapy.maps

.. autoclass:: HpxNDMap
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~HpxNDMap.data
      ~HpxNDMap.geom
      ~HpxNDMap.meta
      ~HpxNDMap.quantity
      ~HpxNDMap.tag
      ~HpxNDMap.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~HpxNDMap.apply_edisp
      ~HpxNDMap.coadd
      ~HpxNDMap.copy
      ~HpxNDMap.create
      ~HpxNDMap.crop
      ~HpxNDMap.downsample
      ~HpxNDMap.fill_by_coord
      ~HpxNDMap.fill_by_idx
      ~HpxNDMap.fill_by_pix
      ~HpxNDMap.fill_events
      ~HpxNDMap.from_geom
      ~HpxNDMap.from_hdu
      ~HpxNDMap.from_hdulist
      ~HpxNDMap.from_images
      ~HpxNDMap.get_by_coord
      ~HpxNDMap.get_by_idx
      ~HpxNDMap.get_by_pix
      ~HpxNDMap.get_image_by_coord
      ~HpxNDMap.get_image_by_idx
      ~HpxNDMap.get_image_by_pix
      ~HpxNDMap.interp_by_coord
      ~HpxNDMap.interp_by_pix
      ~HpxNDMap.interp_to_geom
      ~HpxNDMap.iter_by_image
      ~HpxNDMap.pad
      ~HpxNDMap.plot
      ~HpxNDMap.plot_grid
      ~HpxNDMap.plot_interactive
      ~HpxNDMap.read
      ~HpxNDMap.reduce
      ~HpxNDMap.reduce_over_axes
      ~HpxNDMap.resample_axis
      ~HpxNDMap.set_by_coord
      ~HpxNDMap.set_by_idx
      ~HpxNDMap.set_by_pix
      ~HpxNDMap.slice_by_idx
      ~HpxNDMap.sum_over_axes
      ~HpxNDMap.to_cube
      ~HpxNDMap.to_hdu
      ~HpxNDMap.to_hdulist
      ~HpxNDMap.to_swapped
      ~HpxNDMap.to_ud_graded
      ~HpxNDMap.to_wcs
      ~HpxNDMap.upsample
      ~HpxNDMap.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: data
   .. autoattribute:: geom
   .. autoattribute:: meta
   .. autoattribute:: quantity
   .. autoattribute:: tag
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: apply_edisp
   .. automethod:: coadd
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: crop
   .. automethod:: downsample
   .. automethod:: fill_by_coord
   .. automethod:: fill_by_idx
   .. automethod:: fill_by_pix
   .. automethod:: fill_events
   .. automethod:: from_geom
   .. automethod:: from_hdu
   .. automethod:: from_hdulist
   .. automethod:: from_images
   .. automethod:: get_by_coord
   .. automethod:: get_by_idx
   .. automethod:: get_by_pix
   .. automethod:: get_image_by_coord
   .. automethod:: get_image_by_idx
   .. automethod:: get_image_by_pix
   .. automethod:: interp_by_coord
   .. automethod:: interp_by_pix
   .. automethod:: interp_to_geom
   .. automethod:: iter_by_image
   .. automethod:: pad
   .. automethod:: plot
   .. automethod:: plot_grid
   .. automethod:: plot_interactive
   .. automethod:: read
   .. automethod:: reduce
   .. automethod:: reduce_over_axes
   .. automethod:: resample_axis
   .. automethod:: set_by_coord
   .. automethod:: set_by_idx
   .. automethod:: set_by_pix
   .. automethod:: slice_by_idx
   .. automethod:: sum_over_axes
   .. automethod:: to_cube
   .. automethod:: to_hdu
   .. automethod:: to_hdulist
   .. automethod:: to_swapped
   .. automethod:: to_ud_graded
   .. automethod:: to_wcs
   .. automethod:: upsample
   .. automethod:: write
